crates/axon-parser/src/parser.rs
//! The Axon parser proper.
//!
//! Design notes:
//!
//! * **Newline handling.** Axon is newline-significant (§9.2). The parser
//!   tracks bracket depth: inside `(`, `[`, or `{` the lexer's `Newline`
//!   tokens are skipped as whitespace. At the top of a block they act as
//!   statement separators unless the previous token ends with something that
//!   implies continuation (an open bracket, a binary operator, `|>`, or `\`).
//!
//! * **Brace-literal vs block.** A bare `{` after an expression-introducing
//!   keyword (`if`, `match`, `for`, `while`, function/agent/etc. bodies)
//!   opens a [`Block`]. A `{` met *as an atom in expression position* opens
//!   a brace literal (set / map / record).
//!
//! * **Error recovery.** Errors are accumulated in a `Vec<Diagnostic>`; the
//!   parser tries to resync to the next statement / item boundary using a
//!   simple skip-until-`}` or skip-until-newline heuristic. The AST may end
//!   up with placeholder nodes (e.g. `Pattern::Wildcard`) so downstream
//!   passes can still walk it.

use axon_ast::*;
use axon_diag::{Diagnostic, Fix, FixEdit, SourceFile, Span};
use axon_lexer::{
    self as lex, AddrLitKind, Keyword as Kw, StringKind as LexStringKind, StringPart as LexStringPart,
    Token, TokenKind, Tz,
};

/// Parse a source file. Returns the AST and any diagnostics; the AST is
/// always returned (potentially with placeholder nodes) so tools can still
/// operate on partial input.
pub fn parse(source: &SourceFile) -> (Program, Vec<Diagnostic>) {
    let (tokens, mut diags) = lex::tokenize(source);
    let mut p = Parser::new(tokens, source.text(), source.id());
    let program = p.parse_program();
    diags.extend(p.diagnostics);
    (program, diags)
}

// ===========================================================================
// Parser state
// ===========================================================================

struct Parser<'a> {
    tokens: Vec<Token>,
    pos: usize,
    src: &'a str,
    file_id: u16,
    /// Depth of `(` and `[`. Inside these, newlines are non-significant.
    paren_depth: usize,
    diagnostics: Vec<Diagnostic>,
    /// `pos` at the last call to `error()`. Used to suppress cascade
    /// errors: when the parser keeps reporting from the same position
    /// without advancing, only the first message is kept.
    last_error_pos: Option<usize>,
}

impl<'a> Parser<'a> {
    fn new(tokens: Vec<Token>, src: &'a str, file_id: u16) -> Self {
        Self {
            tokens,
            pos: 0,
            src,
            file_id,
            paren_depth: 0,
            diagnostics: Vec::new(),
            last_error_pos: None,
        }
    }

    fn mk_span(&self, start: usize, end: usize) -> Span {
        Span::in_file(start, end, self.file_id)
    }

    // ---- Token-stream primitives ----------------------------------------

    fn peek(&self) -> &TokenKind {
        // Skip trivia: comments and (when inside brackets) newlines.
        let mut i = self.pos;
        loop {
            match self.tokens.get(i).map(|t| &t.kind) {
                Some(TokenKind::LineComment)
                | Some(TokenKind::BlockComment)
                | Some(TokenKind::DocComment(_))
                | Some(TokenKind::ModDocComment(_)) => i += 1,
                Some(TokenKind::Newline) if self.paren_depth > 0 => i += 1,
                Some(k) => return k,
                None => return &TokenKind::Eof,
            }
        }
    }

    /// Peek including newlines (for statement-terminator decisions).
    fn peek_raw(&self) -> &TokenKind {
        let mut i = self.pos;
        loop {
            match self.tokens.get(i).map(|t| &t.kind) {
                Some(TokenKind::LineComment)
                | Some(TokenKind::BlockComment)
                | Some(TokenKind::DocComment(_))
                | Some(TokenKind::ModDocComment(_)) => i += 1,
                Some(k) => return k,
                None => return &TokenKind::Eof,
            }
        }
    }

    fn peek_span(&self) -> Span {
        let mut i = self.pos;
        loop {
            match self.tokens.get(i).map(|t| &t.kind) {
                Some(TokenKind::LineComment)
                | Some(TokenKind::BlockComment)
                | Some(TokenKind::DocComment(_))
                | Some(TokenKind::ModDocComment(_)) => i += 1,
                Some(TokenKind::Newline) if self.paren_depth > 0 => i += 1,
                Some(_) => return self.tokens[i].span,
                None => return Span::DUMMY,
            }
        }
    }

    fn bump(&mut self) -> Token {
        // Advance past trivia, then take one token. Updates bracket depth
        // so the next `peek` can ignore newlines correctly.
        loop {
            match self.tokens.get(self.pos).map(|t| &t.kind) {
                Some(TokenKind::LineComment)
                | Some(TokenKind::BlockComment)
                | Some(TokenKind::DocComment(_))
                | Some(TokenKind::ModDocComment(_)) => self.pos += 1,
                Some(TokenKind::Newline) if self.paren_depth > 0 => self.pos += 1,
                _ => break,
            }
        }
        let tok = self.tokens.get(self.pos).cloned().unwrap_or(Token {
            kind: TokenKind::Eof,
            span: Span::DUMMY,
        });
        self.pos += 1;
        match &tok.kind {
            TokenKind::LParen | TokenKind::LBracket => self.paren_depth += 1,
            TokenKind::RParen | TokenKind::RBracket => {
                if self.paren_depth > 0 {
                    self.paren_depth -= 1;
                }
            }
            _ => {}
        }
        tok
    }

    fn eat_kw(&mut self, kw: Kw) -> bool {
        if matches!(self.peek(), TokenKind::Keyword(k) if *k == kw) {
            self.bump();
            true
        } else {
            false
        }
    }

    fn expect_kw(&mut self, kw: Kw) -> bool {
        if self.eat_kw(kw) {
            true
        } else {
            let span = self.peek_span();
            self.error(format!("expected keyword `{}`", kw.as_str()), span);
            false
        }
    }

    fn expect(&mut self, k: &TokenKind, what: &str) -> Option<Span> {
        if std::mem::discriminant(self.peek()) == std::mem::discriminant(k) {
            Some(self.bump().span)
        } else {
            let span = self.peek_span();
            self.error(format!("expected {what}"), span);
            None
        }
    }

    /// Consume one or more `Newline`s in statement-separator position.
    fn eat_newlines(&mut self) {
        while matches!(self.tokens.get(self.pos).map(|t| &t.kind), Some(TokenKind::Newline))
            || matches!(
                self.tokens.get(self.pos).map(|t| &t.kind),
                Some(TokenKind::LineComment)
                    | Some(TokenKind::BlockComment)
                    | Some(TokenKind::DocComment(_))
                    | Some(TokenKind::ModDocComment(_))
            )
        {
            self.pos += 1;
        }
    }

    /// Record a parse error. Suppresses cascade duplicates two ways:
    ///
    ///   * Exact-message + exact-span repeats are dropped (same as
    ///     before).
    ///   * Any error that fires while the parser is *still at the
    ///     same token position* as the previous error is dropped —
    ///     this is the classic "one bad token, ten cascade lines"
    ///     pattern. The first error fires; the rest are silenced
    ///     until the parser advances at least one token.
    fn error(&mut self, message: impl Into<String>, span: Span) {
        let msg = message.into();
        if let Some(last) = self.diagnostics.last() {
            if last.primary.span == span && last.message == msg {
                return;
            }
        }
        if let Some(last_pos) = self.last_error_pos {
            if last_pos == self.pos {
                return;
            }
        }
        self.last_error_pos = Some(self.pos);
        self.diagnostics.push(Diagnostic::error(msg, span));
    }

    /// Whole-program error recovery: advance to the start of the next
    /// top-level item. We scan for one of the keyword starts (`fn`,
    /// `agent`, `tool`, …) or contextual idents (`test`, `eval`,
    /// `policy`). Brace depth is deliberately *not* tracked — when
    /// the body that broke had unbalanced braces, depth-tracking would
    /// walk to EOF; the rule "any subsequent item-start keyword wins"
    /// is the right recovery heuristic for real code.
    fn recover_to_next_item(&mut self) {
        // Advance at least one token so we don't immediately re-match
        // the same broken position on the next loop iteration.
        if !self.at_eof() {
            self.bump();
        }
        while !self.at_eof() && !self.at_item_start_token() {
            self.bump();
        }
    }

    fn at_item_start_token(&self) -> bool {
        match self.peek() {
            TokenKind::Keyword(k) => matches!(
                k,
                Kw::Use
                    | Kw::Fn
                    | Kw::Type
                    | Kw::Schema
                    | Kw::Agent
                    | Kw::Actor
                    | Kw::Supervisor
                    | Kw::Graph
                    | Kw::Model
                    | Kw::Tool
                    | Kw::Memory
                    | Kw::Prompt
                    | Kw::Const
                    | Kw::Trait
                    | Kw::Impl
                    | Kw::Pub
            ),
            TokenKind::Ident(s) => matches!(s.as_str(), "test" | "eval" | "policy"),
            _ => false,
        }
    }

    fn at_eof(&self) -> bool {
        matches!(self.peek(), TokenKind::Eof)
    }

    /// Stage 37 — contextual keywords. The five reserved item-starter
    /// keywords `agent`/`tool`/`model`/`memory`/`prompt` may also appear
    /// in identifier positions (variable bindings, expression atoms,
    /// record field labels). This predicate is the gate: in places where
    /// either an `Ident` or one of these soft keywords is acceptable as a
    /// name, the parser consults this and treats the soft keyword as the
    /// corresponding identifier text.
    ///
    /// Why these five specifically: every one of them shadows a high-
    /// frequency author vocabulary word (`let prompt = ...`, `let model = ...`).
    /// The Stage 36 DX survey ranked this as PAPERCUT P2 — the single
    /// highest-frequency new-author error.
    ///
    /// Why NOT every keyword: we want `let if = 1` to stay an error. The
    /// boundary is "keywords that name domain concepts the user already
    /// has variables for" vs. "control-flow / type-system reserved words."
    fn is_soft_keyword(kw: axon_lexer::Keyword) -> bool {
        use axon_lexer::Keyword as Kw;
        matches!(
            kw,
            Kw::Agent | Kw::Tool | Kw::Model | Kw::Memory | Kw::Prompt
        )
    }

    // ---- Programs & items ----------------------------------------------

    fn parse_program(&mut self) -> Program {
        let start = self.peek_span();
        let mut items = Vec::new();
        self.eat_newlines();
        while !self.at_eof() {
            let item_start = self.pos;
            let diag_count_before = self.diagnostics.len();
            match self.parse_item() {
                Some(item) => {
                    // The item parsed (possibly with internal errors).
                    // If new diagnostics fired, resync to the next
                    // item boundary so a half-consumed body doesn't
                    // cascade into the next item's parse.
                    if self.diagnostics.len() > diag_count_before {
                        self.recover_to_next_item();
                    }
                    items.push(item);
                }
                None => {
                    // Couldn't recognize an item header.
                    if self.pos == item_start {
                        let span = self.peek_span();
                        self.error("expected a top-level item", span);
                        if !self.at_eof() {
                            self.bump();
                        }
                    }
                    // After failing to parse one, walk forward to the
                    // next plausible item start so we don't crawl
                    // token-by-token through a syntactically broken
                    // region.
                    self.recover_to_next_item();
                }
            }
            self.eat_newlines();
        }
        Program {
            items,
            span: Span::in_file(start.start as usize, self.peek_span().end as usize, self.file_id),
        }
    }

    fn parse_item(&mut self) -> Option<Item> {
        let attrs = self.parse_attributes();
        let vis = if self.eat_kw(Kw::Pub) {
            Visibility::Public
        } else {
            Visibility::Private
        };
        let is_async = self.eat_kw(Kw::Async);
        match self.peek().clone() {
            TokenKind::Keyword(Kw::Use) => Some(Item::Use(self.parse_use_decl())),
            TokenKind::Keyword(Kw::Fn) => Some(Item::Fn(self.parse_fn_decl(vis, attrs, is_async))),
            TokenKind::Keyword(Kw::Type) => Some(Item::Type(self.parse_type_decl(vis))),
            TokenKind::Keyword(Kw::Schema) => Some(Item::Schema(self.parse_schema_decl(vis))),
            TokenKind::Keyword(Kw::Agent) => Some(Item::Agent(self.parse_agent_decl())),
            TokenKind::Keyword(Kw::Actor) => Some(Item::Actor(self.parse_actor_decl())),
            TokenKind::Keyword(Kw::Supervisor) => {
                Some(Item::Supervisor(self.parse_supervisor_decl()))
            }
            TokenKind::Keyword(Kw::Graph) => Some(Item::Graph(self.parse_graph_decl())),
            TokenKind::Keyword(Kw::Model) => Some(Item::Model(self.parse_model_decl())),
            TokenKind::Keyword(Kw::Tool) => Some(Item::Tool(self.parse_tool_decl())),
            TokenKind::Keyword(Kw::Memory) => Some(Item::Memory(self.parse_memory_decl())),
            TokenKind::Keyword(Kw::Prompt) => Some(Item::Prompt(self.parse_prompt_decl())),
            TokenKind::Keyword(Kw::Const) => Some(Item::Const(self.parse_const_decl(vis))),
            TokenKind::Keyword(Kw::Trait) => Some(Item::Trait(self.parse_trait_decl(vis))),
            TokenKind::Keyword(Kw::Impl) => Some(Item::Impl(self.parse_impl_block())),
            // `test "..." { ... }` and `eval "..." { ... }` use contextual
            // identifiers (not keywords per §9.3) so they don't get reserved
            // as a name in user code.
            TokenKind::Ident(s) if s == "test" => Some(Item::Test(self.parse_test_decl(false))),
            TokenKind::Ident(s) if s == "eval" => Some(Item::Eval(self.parse_eval_decl())),
            TokenKind::Ident(s) if s == "policy" => {
                Some(Item::Policy(self.parse_policy_decl()))
            }
            _ => None,
        }
    }

    fn parse_test_decl(&mut self, _is_eval: bool) -> axon_ast::TestDecl {
        let start = self.peek_span();
        self.bump(); // consume `test`
        // The test's label is a string literal — either single-line or
        // multi-line. We pull the text out and use it as the test name.
        let name = self.expect_string_literal();
        let body = self.parse_block();
        axon_ast::TestDecl {
            name,
            body,
            span: Span::in_file(start.start as usize, self.prev_end(), self.file_id),
        }
    }

    fn parse_eval_decl(&mut self) -> axon_ast::EvalDecl {
        let start = self.peek_span();
        self.bump(); // consume `eval`
        let name = self.expect_string_literal();
        let body = self.parse_block();
        axon_ast::EvalDecl {
            name,
            body,
            span: Span::in_file(start.start as usize, self.prev_end(), self.file_id),
        }
    }

    /// `policy NAME { allow tool …; deny net …; budget …; rate …; audit … }`
    /// (§30). Parsed into structured [`PolicyClause`]s; the runtime
    /// compiles them into an enforceable policy block.
    fn parse_policy_decl(&mut self) -> axon_ast::PolicyDecl {
        use axon_ast::{PolicyAction, PolicyClause};
        let start = self.peek_span();
        self.bump(); // consume `policy`
        let name = self.parse_ident();
        self.expect(&TokenKind::LBrace, "`{` to start policy body");
        self.eat_newlines();
        let mut clauses = Vec::new();
        while !matches!(self.peek(), TokenKind::RBrace) && !self.at_eof() {
            // Each clause is keyword-led by a contextual identifier.
            let lead = match self.peek().clone() {
                TokenKind::Ident(s) => s,
                _ => {
                    let sp = self.peek_span();
                    self.error("expected a policy clause (allow/deny/budget/rate/audit)", sp);
                    // Skip to next line to recover.
                    let _ = self.consume_raw_until_newline();
                    self.eat_newlines();
                    continue;
                }
            };
            match lead.as_str() {
                "allow" | "deny" => {
                    self.bump(); // action
                    let action = if lead == "allow" {
                        PolicyAction::Allow
                    } else {
                        PolicyAction::Deny
                    };
                    let effect = self.parse_ident().name;
                    let mut patterns = vec![self.parse_policy_pattern()];
                    while matches!(self.peek(), TokenKind::Comma) {
                        self.bump();
                        patterns.push(self.parse_policy_pattern());
                    }
                    // `when` is a reserved keyword (Kw::When), not an ident.
                    let when = if self.eat_kw(Kw::When) {
                        Some(self.consume_raw_until_newline())
                    } else {
                        None
                    };
                    clauses.push(PolicyClause::Rule {
                        action,
                        effect,
                        patterns,
                        when,
                    });
                }
                "budget" => {
                    self.bump();
                    let scope = self.parse_ident().name;
                    let (usd_cents, tokens) = self.parse_policy_budget_body();
                    clauses.push(PolicyClause::Budget {
                        scope,
                        usd_cents,
                        tokens,
                    });
                }
                "rate" => {
                    self.bump();
                    let scope = self.parse_ident().name;
                    let (max_calls, window_secs) = self.parse_policy_rate_body();
                    clauses.push(PolicyClause::Rate {
                        scope,
                        max_calls,
                        window_secs,
                    });
                }
                "audit" => {
                    self.bump();
                    let mut kinds = vec![self.parse_ident().name];
                    while matches!(self.peek(), TokenKind::Comma) {
                        self.bump();
                        kinds.push(self.parse_ident().name);
                    }
                    clauses.push(PolicyClause::Audit(kinds));
                }
                other => {
                    let sp = self.peek_span();
                    self.error(
                        &format!("unknown policy clause `{other}` (expected allow/deny/budget/rate/audit)"),
                        sp,
                    );
                    let _ = self.consume_raw_until_newline();
                }
            }
            self.eat_newlines();
        }
        self.expect(&TokenKind::RBrace, "`}` to close policy");
        axon_ast::PolicyDecl {
            name,
            clauses,
            span: Span::in_file(start.start as usize, self.prev_end(), self.file_id),
        }
    }

    /// A policy target pattern: a dotted ident (`kb.search`), a string
    /// glob (`"kb.internal"`, `"*"`), or a bare `*`.
    fn parse_policy_pattern(&mut self) -> String {
        match self.peek().clone() {
            TokenKind::Ident(_) => {
                let path = self.parse_path();
                path.segments
                    .iter()
                    .map(|s| s.name.as_str())
                    .collect::<Vec<_>>()
                    .join(".")
            }
            TokenKind::Star => {
                self.bump();
                "*".to_string()
            }
            _ => self.expect_string_literal(),
        }
    }

    /// `{ usd = 0.50, tokens = 60_000 }` → (usd_cents, tokens).
    fn parse_policy_budget_body(&mut self) -> (Option<i64>, Option<i64>) {
        let mut usd_cents = None;
        let mut tokens = None;
        self.expect(&TokenKind::LBrace, "`{` to start budget body");
        self.eat_newlines();
        while !matches!(self.peek(), TokenKind::RBrace) && !self.at_eof() {
            let key = self.parse_ident().name;
            self.expect(&TokenKind::Eq, "`=` in budget entry");
            match key.as_str() {
                "usd" => usd_cents = Some(self.parse_money_or_number_as_cents()),
                "tokens" => tokens = Some(self.parse_int_value()),
                _ => {
                    // Unknown budget key — skip its value.
                    let _ = self.consume_raw_until_newline();
                }
            }
            if matches!(self.peek(), TokenKind::Comma) {
                self.bump();
            }
            self.eat_newlines();
        }
        self.expect(&TokenKind::RBrace, "`}` to close budget body");
        (usd_cents, tokens)
    }

    /// `{ 30 per 1m }` → (max_calls, window_secs).
    fn parse_policy_rate_body(&mut self) -> (u32, u64) {
        self.expect(&TokenKind::LBrace, "`{` to start rate body");
        self.eat_newlines();
        let max_calls = self.parse_int_value().max(0) as u32;
        let _ = self.bump_if_ident("per");
        let window_secs = match self.peek().clone() {
            TokenKind::Duration { nanos, .. } => {
                self.bump();
                (nanos / 1_000_000_000) as u64
            }
            _ => {
                let v = self.parse_int_value().max(0) as u64;
                v
            }
        };
        self.eat_newlines();
        self.expect(&TokenKind::RBrace, "`}` to close rate body");
        (max_calls, window_secs.max(1))
    }

    fn parse_int_value(&mut self) -> i64 {
        match self.peek().clone() {
            TokenKind::Int { value, .. } => {
                self.bump();
                value as i64
            }
            _ => {
                let sp = self.peek_span();
                self.error("expected an integer", sp);
                0
            }
        }
    }

    /// Read a money literal (`0.50usd`) or a plain number and return the
    /// value in cents.
    fn parse_money_or_number_as_cents(&mut self) -> i64 {
        match self.peek().clone() {
            TokenKind::Money { amount, .. } => {
                self.bump();
                money_str_to_cents(&amount)
            }
            TokenKind::Float { lexeme } => {
                self.bump();
                let f: f64 = lexeme.parse().unwrap_or(0.0);
                (f * 100.0).round() as i64
            }
            TokenKind::Int { value, .. } => {
                self.bump();
                (value as i64) * 100
            }
            _ => {
                let sp = self.peek_span();
                self.error("expected a money or numeric budget value", sp);
                0
            }
        }
    }

    fn parse_attributes(&mut self) -> Vec<Attribute> {
        let mut out = Vec::new();
        loop {
            match self.peek() {
                TokenKind::At => {
                    let start = self.peek_span();
                    self.bump();
                    let name = self.parse_path();
                    let args = if matches!(self.peek(), TokenKind::LParen) {
                        self.parse_paren_arg_exprs()
                    } else {
                        Vec::new()
                    };
                    out.push(Attribute {
                        style: AttrStyle::At,
                        name,
                        args,
                        span: Span::in_file(start.start as usize, self.prev_end(), self.file_id),
                    });
                    self.eat_newlines();
                }
                TokenKind::HashLBracket => {
                    let start = self.peek_span();
                    self.bump();
                    let name = self.parse_path();
                    let args = if matches!(self.peek(), TokenKind::LParen) {
                        self.parse_paren_arg_exprs()
                    } else {
                        Vec::new()
                    };
                    self.expect(&TokenKind::RBracket, "`]` to close attribute");
                    out.push(Attribute {
                        style: AttrStyle::Outer,
                        name,
                        args,
                        span: Span::in_file(start.start as usize, self.prev_end(), self.file_id),
                    });
                    self.eat_newlines();
                }
                _ => break,
            }
        }
        out
    }

    fn prev_end(&self) -> usize {
        let mut i = self.pos;
        while i > 0 {
            i -= 1;
            if !matches!(
                self.tokens.get(i).map(|t| &t.kind),
                Some(TokenKind::Newline)
                    | Some(TokenKind::LineComment)
                    | Some(TokenKind::BlockComment)
                    | Some(TokenKind::DocComment(_))
                    | Some(TokenKind::ModDocComment(_))
            ) {
                return self.tokens[i].span.end as usize;
            }
        }
        0
    }

    // ---- Common parsers -------------------------------------------------

    /// Parse a name in a *binding* position.
    ///
    /// The spec lists many domain keywords (`model`, `memory`, `ask`, `plan`,
    /// `tool`, `prompt`, etc.). The README routinely uses these as parameter
    /// names, message-handler names, and field names — they only function as
    /// keywords in item-prefix or expression-start position. In binding
    /// positions we accept either an `Ident` token or any `Keyword`, the
    /// latter rewritten to the keyword's lexeme.
    fn parse_ident(&mut self) -> Ident {
        match self.peek().clone() {
            TokenKind::Ident(name) => {
                let span = self.bump().span;
                Ident { name, span }
            }
            TokenKind::Keyword(kw) => {
                let span = self.bump().span;
                Ident {
                    name: kw.as_str().to_string(),
                    span,
                }
            }
            other => {
                let span = self.peek_span();
                self.error(format!("expected a name, got {other:?}"), span);
                Ident {
                    name: String::new(),
                    span,
                }
            }
        }
    }

    fn parse_ident_or_kw(&mut self) -> Ident {
        self.parse_ident()
    }

    fn parse_path(&mut self) -> Path {
        let first = self.parse_ident();
        let start = first.span;
        let mut segments = vec![first];
        while matches!(self.peek(), TokenKind::Dot) {
            // Path continuation: keep going as long as a name token (ident
            // or keyword-as-name) follows the dot. Bail otherwise so the
            // postfix `.` machinery can claim it.
            let save = self.pos;
            self.bump();
            if matches!(self.peek(), TokenKind::Ident(_) | TokenKind::Keyword(_)) {
                segments.push(self.parse_ident());
            } else {
                self.pos = save;
                break;
            }
        }
        let end = segments.last().unwrap().span.end as usize;
        Path {
            segments,
            span: Span::in_file(start.start as usize, end, self.file_id),
        }
    }

    fn parse_use_decl(&mut self) -> UseDecl {
        let start = self.peek_span();
        self.bump(); // `use`
        let path = self.parse_path();
        let items = if matches!(self.peek(), TokenKind::Dot) {
            // peek ahead for `.{`
            let save = self.pos;
            self.bump();
            if matches!(self.peek(), TokenKind::LBrace) {
                self.bump();
                let mut idents = Vec::new();
                if !matches!(self.peek(), TokenKind::RBrace) {
                    idents.push(self.parse_ident());
                    while matches!(self.peek(), TokenKind::Comma) {
                        self.bump();
                        if matches!(self.peek(), TokenKind::RBrace) {
                            break;
                        }
                        idents.push(self.parse_ident());
                    }
                }
                self.expect(&TokenKind::RBrace, "`}` to close use list");
                Some(idents)
            } else {
                self.pos = save;
                None
            }
        } else {
            None
        };
        let alias = if self.eat_kw(Kw::As) {
            Some(self.parse_ident())
        } else {
            None
        };
        UseDecl {
            path,
            items,
            alias,
            span: Span::in_file(start.start as usize, self.prev_end(), self.file_id),
        }
    }

    fn parse_generics(&mut self) -> Generics {
        if !matches!(self.peek(), TokenKind::Lt) {
            return Generics::default();
        }
        let start = self.peek_span();
        self.bump();
        self.paren_depth += 1; // treat as bracket for newline purposes
        let mut params = Vec::new();
        loop {
            if matches!(self.peek(), TokenKind::Gt) {
                break;
            }
            params.push(self.parse_generic_param());
            if !matches!(self.peek(), TokenKind::Comma) {
                break;
            }
            self.bump();
        }
        self.paren_depth = self.paren_depth.saturating_sub(1);
        self.expect(&TokenKind::Gt, "`>` to close generics");
        Generics {
            params,
            span: Span::in_file(start.start as usize, self.prev_end(), self.file_id),
        }
    }

    fn parse_generic_param(&mut self) -> GenericParam {
        let start = self.peek_span();
        match self.peek().clone() {
            TokenKind::Plus => {
                self.bump();
                let name = self.parse_ident();
                GenericParam::Covariant {
                    name,
                    span: Span::in_file(start.start as usize, self.prev_end(), self.file_id),
                }
            }
            TokenKind::Minus => {
                self.bump();
                let name = self.parse_ident();
                GenericParam::Contravariant {
                    name,
                    span: Span::in_file(start.start as usize, self.prev_end(), self.file_id),
                }
            }
            _ => {
                let name = self.parse_ident();
                let mut bounds = Vec::new();
                if matches!(self.peek(), TokenKind::Colon) {
                    self.bump();
                    bounds.push(self.parse_path());
                    while matches!(self.peek(), TokenKind::Plus) {
                        self.bump();
                        bounds.push(self.parse_path());
                    }
                }
                let is_effect_var = name.name.chars().next().map_or(false, |c| c.is_lowercase())
                    && bounds.is_empty();
                if is_effect_var {
                    GenericParam::Effect {
                        name,
                        span: Span::in_file(start.start as usize, self.prev_end(), self.file_id),
                    }
                } else {
                    GenericParam::Type {
                        name,
                        bounds,
                        span: Span::in_file(start.start as usize, self.prev_end(), self.file_id),
                    }
                }
            }
        }
    }

    fn parse_effect_row(&mut self) -> EffectRow {
        let start = self.peek_span();
        self.expect(&TokenKind::LBrace, "`{` to open effect row");
        self.paren_depth += 1;
        let mut effects = Vec::new();
        if !matches!(self.peek(), TokenKind::RBrace) {
            effects.push(self.parse_effect_atom());
            while matches!(self.peek(), TokenKind::Comma) {
                self.bump();
                if matches!(self.peek(), TokenKind::RBrace) {
                    break;
                }
                effects.push(self.parse_effect_atom());
            }
        }
        self.paren_depth = self.paren_depth.saturating_sub(1);
        self.expect(&TokenKind::RBrace, "`}` to close effect row");
        EffectRow {
            effects,
            span: Span::in_file(start.start as usize, self.prev_end(), self.file_id),
        }
    }

    fn parse_effect_atom(&mut self) -> EffectAtom {
        let path = self.parse_path();
        EffectAtom {
            span: path.span,
            path,
        }
    }
